<resources>
    <!-- Common -->
    <string name="app_name">Reminder</string>
    <string name="cd_right_arrow_icon">오른쪽 화살표 아이콘</string>

    <!-- Main -->
    <!-- Reminders -->
    <string name="reminders_title">리마인드</string>
    <string name="reminders_add_reminder">리마인더 추가</string>
    <string name="reminders_cd_clock_icon">시계 아이콘</string>
    <string name="reminders_cd_check_icon">체크 아이콘</string>

    <!-- Reminder -->
    <string name="reminder_title">리마인드 설정</string>
    <string name="reminder_name">리마인드 이름</string>
    <string name="reminder_name_hint">Please enter a name</string>
    <string name="reminder_time_set">시간 설정</string>
    <string name="reminder_ringtone">벨소리</string>
    <string name="reminder_ringtone_en">Ringtone</string>
    <string name="reminder_save">Save</string>

    <string name="reminder_cd_ringtone">벨소리 아이콘</string>

    <!--  Alarm  -->
    <string name="alarm_dismiss">Dismiss</string>
</resources>